Wprowadzenie normalizatora stylu

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
       rel="stylesheet"
     />
     <!--End Google font-->
+    <!--Modern-normal-->
+    <link rel="stylesheet" href="/css/modern-normalize.css" />
+
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
