--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="main-page">
       <header>
         <!--Logo-->
-        <div class="menu-box">
+        <div class="container menu-box">
           <h2 class="logo"><span class="first-part-logo">Web</span>Studio</h2>
           <nav class="menu">
             <ul class="list box">
@@ -36,20 +36,20 @@
           >
           <a class="menu-phone" href="tel:+48111111111">+48 111 111 111</a>
         </div>
-           </header>
+      </header>
       <main>
-        <section class="section primary">
+        <section class="primary">
           <!--HERO-->
           <h1 class="primary-title">
             Efektywne rozwiązania dla waszego biznesu
           </h1>
           <button class="primary-bg" type="button">Zamów usługe</button>
         </section>
-        <section class="section feature">
+        <section class="container feature">
           <!--TEKST-->
           <ul class="list box">
             <div class="feature">
-              <li>
+              <li class="feature-box">
                 <h3 class="feature-title">Lorem ipsum</h3>
                 <p class="feature-section">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
@@ -80,7 +80,7 @@
             </div>
           </ul>
         </section>
-        <section class="section tender">
+        <section class="tender">
           <!--OFERTA-->
           <div class="container">
             <h2 class="tender-title">Czym się zajmujemy</h2>
@@ -112,81 +112,86 @@
             </ul>
           </div>
         </section>
-        <section class="section team">
+        <section class="team">
           <!--ZESPÓŁ-->
-          <h2 class="team-title">Nasz zespół</h2>
-          <ul class="list box">
-            <li class="team-card">
-              <img
-                src="images/product-designer.jpg"
-                alt="UśmiechniętymMęższczyzna w okularach z brodą w koszuli"
-                width="270"
-                height="260"
-              />
-              <h3 class="team-name">John Doe</h3>
-              <p class="team-job">Product Designer</p>
-            </li>
-            <li class="team-card">
-              <img
-                src="images/frontend-developer.jpg"
-                alt="Uśmiechnięta kobieta w długich bląd włosach w okularach"
-                width="270"
-                height="260"
-              />
-              <h3 class="team-name">John Doe</h3>
-              <p class="team-job">Frontend Developer</p>
-            </li>
-            <li class="team-card">
-              <img
-                src="images/marketing.jpg"
-                alt="Męszczyzna uśmiechnięty w jasnej koszuli"
-                width="270"
-                height="260"
-              />
-              <h3 class="team-name">John Doe</h3>
-              <p class="team-job">Marketing</p>
-            </li>
-            <li class="team-card">
-              <img
-                src="images/ui-designer.jpg"
-                alt="Męszczyzna z brodą w okularach w czarnym tiszercie"
-                width="270"
-                height="260"
-              />
-              <h3 class="team-name">John Doe</h3>
-              <p class="team-job">UI Designer</p>
-            </li>
-          </ul>
+          <div class="container">
+            <h2 class="team-title">Nasz zespół</h2>
+            <ul class="list box">
+              <li class="team-card">
+                <img
+                  src="images/product-designer.jpg"
+                  alt="UśmiechniętymMęższczyzna w okularach z brodą w koszuli"
+                  width="270"
+                  height="260"
+                />
+                <h3 class="team-name">John Doe</h3>
+                <p class="team-job">Product Designer</p>
+              </li>
+              <li class="team-card">
+                <img
+                  src="images/frontend-developer.jpg"
+                  alt="Uśmiechnięta kobieta w długich bląd włosach w okularach"
+                  width="270"
+                  height="260"
+                />
+                <h3 class="team-name">John Doe</h3>
+                <p class="team-job">Frontend Developer</p>
+              </li>
+              <li class="team-card">
+                <img
+                  src="images/marketing.jpg"
+                  alt="Męszczyzna uśmiechnięty w jasnej koszuli"
+                  width="270"
+                  height="260"
+                />
+                <h3 class="team-name">John Doe</h3>
+                <p class="team-job">Marketing</p>
+              </li>
+              <li class="team-card">
+                <img
+                  src="images/ui-designer.jpg"
+                  alt="Męszczyzna z brodą w okularach w czarnym tiszercie"
+                  width="270"
+                  height="260"
+                />
+                <h3 class="team-name">John Doe</h3>
+                <p class="team-job">UI Designer</p>
+              </li>
+            </ul>
+          </div>
         </section>
       </main>
       <footer>
         <div class="contact">
-          <h2 class="logo">
-            <span class="first-part-logo">Web</span
-            ><spon class="secend-part-logo">Studio</spon>
-          </h2>
-          <address>
-            <ul class="contact-list">
-              <li>
-                <a
-                  class="contact-data"
-                  href="https://goo.gl/maps/quSYSpreMcUmD9Dv7"
-                  target="_blank"
-                  >m. Warszawa, Aleje Jerozolimskie 21
-                </a>
-              </li>
-              <li>
-                <a class="contact-mail" href="mailito:info@example.com"
-                  >info@example.com</a
-                >
-              </li>
-              <li>
-                <a class="contact-phone" href="tel:+48111111111"
-                  >+48 111 111 111</a
-                >
-              </li>
-            </ul>
-          </address>
+          <div class="container">
+            <h2 class="logo">
+              <span class="first-part-logo">Web</span
+              ><spon class="secend-part-logo">Studio</spon>
+            </h2>
+
+            <address>
+              <ul class="contact-list">
+                <li>
+                  <a
+                    class="contact-data"
+                    href="https://goo.gl/maps/quSYSpreMcUmD9Dv7"
+                    target="_blank"
+                    >m. Warszawa, Aleje Jerozolimskie 21
+                  </a>
+                </li>
+                <li>
+                  <a class="contact-mail" href="mailito:info@example.com"
+                    >info@example.com</a
+                  >
+                </li>
+                <li>
+                  <a class="contact-phone" href="tel:+48111111111"
+                    >+48 111 111 111</a
+                  >
+                </li>
+              </ul>
+            </address>
+          </div>
         </div>
       </footer>
     </div>
