Stylizacja stron w css

--- a/index.html
+++ b/index.html
@@ -45,40 +45,42 @@
           </h1>
           <button class="primary-bg" type="button">Zamów usługe</button>
         </section>
-        <section class="container feature">
+        <section class="container">
           <!--TEKST-->
-          <ul class="list box">
-            <div class="feature">
-              <li class="feature-box">
-                <h3 class="feature-title">Lorem ipsum</h3>
-                <p class="feature-section">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
-                  vel arcu sem. Sed non sodales dui. Interdum et malesuada
-                </p>
-              </li>
-              <li>
-                <h3 class="feature-title">Lorem ipsum</h3>
-                <p class="feature-section">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
-                  vel arcu sem. Sed non sodales dui. Interdum et malesuada
-                </p>
-              </li>
-              <li>
-                <h3 class="feature-title">Lorem ipsum</h3>
-                <p class="feature-section">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
-                  vel arcu sem. Sed non sodales dui. Interdum et malesuada
-                </p>
-              </li>
-              <li>
-                <h3 class="feature-title">Lorem ipsum</h3>
-                <p class="feature-section">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
-                  vel arcu sem. Sed non sodales dui. Interdum et malesuada
-                </p>
-              </li>
-            </div>
-          </ul>
+          <div class="box">
+            <ul class="list">
+              <div class="feature">
+                <li>
+                  <h3 class="feature-title">Lorem ipsum</h3>
+                  <p class="feature-section">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
+                    vel arcu sem. Sed non sodales dui. Interdum et malesuada
+                  </p>
+                </li>
+                <li>
+                  <h3 class="feature-title">Lorem ipsum</h3>
+                  <p class="feature-section">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
+                    vel arcu sem. Sed non sodales dui. Interdum et malesuada
+                  </p>
+                </li>
+                <li>
+                  <h3 class="feature-title">Lorem ipsum</h3>
+                  <p class="feature-section">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
+                    vel arcu sem. Sed non sodales dui. Interdum et malesuada
+                  </p>
+                </li>
+                <li>
+                  <h3 class="feature-title">Lorem ipsum</h3>
+                  <p class="feature-section">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
+                    vel arcu sem. Sed non sodales dui. Interdum et malesuada
+                  </p>
+                </li>
+              </div>
+            </ul>
+          </div>
         </section>
         <section class="tender">
           <!--OFERTA-->
@@ -164,11 +166,12 @@
       <footer>
         <div class="contact">
           <div class="container">
-            <h2 class="logo">
-              <span class="first-part-logo">Web</span
-              ><spon class="secend-part-logo">Studio</spon>
-            </h2>
-
+            <div class="contact-box">
+              <h2 class="logo">
+                <span class="first-part-logo">Web</span
+                ><spon class="secend-part-logo">Studio</spon>
+              </h2>
+            </div>
             <address>
               <ul class="contact-list">
                 <li>
