--- a/portfolio.html
+++ b/portfolio.html
@@ -20,142 +20,139 @@
   </head>
   <body>
     <div class="portfolio-page">
-      <header>
+       <header>
         <!--Logo-->
-        <div class="container">
-          <div class="menu-box">
-            <h2 class="logo"><span class="first-part-logo">Web</span>Studio</h2>
-            <nav class="menu">
-              <ul class="list box">
-                <li><a class="menu-nav" href="index.html">Agencja</a></li>
-                <li><a class="menu-nav" href="portfolio.html">Pordfolio</a></li>
-                <li><a class="menu-nav" href="/contact">Kontakt</a></li>
-              </ul>
-            </nav>
-            <a class="menu-mail" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-            <a class="menu-phone" href="tel:+48111111111">+48 111 111 111</a>
-          </div>
+        <div class="container menu-box">
+          <h2 class="logo"><span class="first-part-logo">Web</span>Studio</h2>
+          <nav class="menu">
+            <ul class="list box">
+              <li><a class="menu-nav" href="index.html">Agencja</a></li>
+              <li><a class="menu-nav" href="portfolio.html">Pordfolio</a></li>
+              <li><a class="menu-nav" href="/contact">Kontakt</a></li>
+            </ul>
+          </nav>
+          <a class="menu-mail" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+          <a class="menu-phone" href="tel:+48111111111">+48 111 111 111</a>
         </div>
-        <hr class="line" />
       </header>
     <main>
-      <section class="section filter">
+      <section class="filter">
         <!--HERO-->
-        <div class="container">
           <button class="filter-bg" type="button">Wszystkie</button>
           <button class="filter-bg" type="button">Strony</button>
           <button class="filter-bg" type="button">Aplikacje</button>
           <button class="filter-bg" type="button">Dizajn</button>
           <button class="filter-bg" type="button">Marketing</button>
-        </div>
-      </section>
-      <section class="portfolio">
+        </section>
+      <section class="portfolio ">
         <!--Portfolio-->
-        <div class="container">
-          <ul class="list box">
-            <li class="portfolio-card">
-              <img
-                src="images/technocrack.jpg"
-                alt="Strona internetowa z twarzami ludzi"
-                width="370"
-                height="294"
-              />
-              <h3 class="portfolio-name">Technocrack</h3>
-              <p class="portfolio-job">Strona internetowa</p>
-            </li>
-            <li class="portfolio-card">
-              <img
-                src="images/grafika-new-orlean-vs-golden-star.jpg"
-                alt="Dwóch graczy w kosza z błękitną smugą w tle"
-                width="370"
-                height="294"
-              />
-              <h3 class="portfolio-name">Grafika New Orlean vs Golden Star</h3>
-              <p class="portfolio-job">Dizajn</p>
-            </li>
-            <li class="portfolio-card">
-              <img
-                src="images/restauracja-seafood.jpg"
-                alt="Logo firmy z rybą w tle"
-                width="370"
-                height="294"
-              />
-              <h3 class="portfolio-name">Restauracja Seafood</h3>
-              <p class="portfolio-job">Aplikacja</p>
-            </li>
-            <li class="portfolio-card">
-              <img
-                src="images/projekt-prime.jpg"
-                alt="Czarne słuchawki na białym tle"
-                width="370"
-                height="294"
-              />
-              <h3 class="portfolio-name">Projekt Prime</h3>
-              <p class="portfolio-job">Marketing</p>
-            </li>
-            <li class="portfolio-card">
-              <img
-                src="images/projekt-boxes.jpg"
-                alt="Dwa pudełka białe większe, brązowe mniejsze"
-                width="370"
-                height="294"
-              />
-              <h3 class="portfolio-name">Projekt Boxes</h3>
-              <p class="portfolio-job">Aplikacja</p>
-            </li>
-            <li class="portfolio-card">
-              <img
-                src="images/inspiration-has-no-borders.jpg"
-                alt="Strona internetowa w kolorze granatowym z mapą świata"
-                width="370"
-                height="294"
-              />
-              <h3 class="portfolio-name">Inspiration has no Borders</h3>
-              <p class="portfolio-job">Strona internetowa</p>
-            </li>
-            <li class="portfolio-card">
-              <img
-                src="images/magazyn-limited-edition.jpg"
-                alt="Magazyn z kolorowymi zdjęciami kobiety z suszarka, torebką i dwie kobiety z ręką w góże ze znakim solidarności"
-                width="370"
-                height="294"
-              />
-              <h3 class="portfolio-name">Magazyn Limited Edition</h3>
-              <p class="portfolio-job">Dizajn</p>
-            </li>
-            <li class="portfolio-card">
-              <img
-                src="images/projekt-lab.jpg"
-                alt="Zawiszka na sznurku"
-                width="370"
-                height="294"
-              />
-              <h3 class="portfolio-name">Projekt LAB</h3>
-              <p class="portfolio-job">Marketing</p>
-            </li>
-            <li class="portfolio-card">
-              <img
-                src="images/growing-business.jpg"
-                alt="Lapropo z otwarą stroną biznesową internetową"
-                width="370"
-                height="294"
-              />
-              <h3 class="portfolio-name">Growing Business</h3>
-              <p class="portfolio-job">Aplikacja</p>
-            </li>
-          </ul>
-        </div>
+        <ul class="list container">
+          <div class="portfolio-box">
+          <li class="portfolio-card">
+            <img
+              src="images/technocrack.jpg"
+              alt="Strona internetowa z twarzami ludzi"
+              width="370"
+              height="294"
+            />
+            <h3 class="portfolio-name">Technocrack</h3>
+            <p class="portfolio-job">Strona internetowa</p>
+          </li>
+          <li class="portfolio-card">
+            <img
+              src="images/grafika-new-orlean-vs-golden-star.jpg"
+              alt="Dwóch graczy w kosza z błękitną smugą w tle"
+              width="370"
+              height="294"
+            />
+            <h3 class="portfolio-name">Grafika New Orlean vs Golden Star</h3>
+            <p class="portfolio-job">Dizajn</p>
+          </li>
+          <li class="portfolio-card">
+            <img
+              src="images/restauracja-seafood.jpg"
+              alt="Logo firmy z rybą w tle"
+              width="370"
+              height="294"
+            />
+            <h3 class="portfolio-name">Restauracja Seafood</h3>
+            <p class="portfolio-job">Aplikacja</p>
+          </li>
+          <li class="portfolio-card">
+            <img
+              src="images/projekt-prime.jpg"
+              alt="Czarne słuchawki na białym tle"
+              width="370"
+              height="294"
+            />
+            <h3 class="portfolio-name">Projekt Prime</h3>
+            <p class="portfolio-job">Marketing</p>
+          </li>
+          <li class="portfolio-card">
+            <img
+              src="images/projekt-boxes.jpg"
+              alt="Dwa pudełka białe większe, brązowe mniejsze"
+              width="370"
+              height="294"
+            />
+            <h3 class="portfolio-name">Projekt Boxes</h3>
+            <p class="portfolio-job">Aplikacja</p>
+          </li>
+          <li class="portfolio-card">
+            <img
+              src="images/inspiration-has-no-borders.jpg"
+              alt="Strona internetowa w kolorze granatowym z mapą świata"
+              width="370"
+              height="294"
+            />
+            <h3 class="portfolio-name">Inspiration has no Borders</h3>
+            <p class="portfolio-job">Strona internetowa</p>
+          </li>
+          <li class="portfolio-card">
+            <img
+              src="images/magazyn-limited-edition.jpg"
+              alt="Magazyn z kolorowymi zdjęciami kobiety z suszarka, torebką i dwie kobiety z ręką w góże ze znakim solidarności"
+              width="370"
+              height="294"
+            />
+            <h3 class="portfolio-name">Magazyn Limited Edition</h3>
+            <p class="portfolio-job">Dizajn</p>
+          </li>
+          <li class="portfolio-card">
+            <img
+              src="images/projekt-lab.jpg"
+              alt="Zawiszka na sznurku"
+              width="370"
+              height="294"
+            />
+            <h3 class="portfolio-name">Projekt LAB</h3>
+            <p class="portfolio-job">Marketing</p>
+          </li>
+          <li class="portfolio-card">
+            <img
+              src="images/growing-business.jpg"
+              alt="Lapropo z otwarą stroną biznesową internetową"
+              width="370"
+              height="294"
+            />
+            <h3 class="portfolio-name">Growing Business</h3>
+            <p class="portfolio-job">Aplikacja</p>
+          </li>
+          </div>
+        </ul>
       </section>
     </main>
     <footer>
       <div class="contact">
         <div class="container">
-          <h2 class="logo">
-            <span class="first-part-logo">Web</span
-            ><spon class="secend-part-logo">Studio</spon>
-          </h2>
+          <div class="contact-box">
+            <h2 class="logo">
+              <span class="first-part-logo">Web</span
+              ><spon class="secend-part-logo">Studio</spon>
+            </h2>
+          </div>
           <address>
             <ul class="contact-list">
               <li>
