Introduction of the mentor's comments

--- a/index.html
+++ b/index.html
@@ -23,29 +23,36 @@
       <header>
         <!--Logo-->
         <div class="container menu-box">
-          <h2 class="logo"><span class="first-part-logo">Web</span>Studio</h2>
-          <nav class="menu">
-            <ul class="list box">
-              <li><a class="menu-nav" href="index.html">Agencja</a></li>
-              <li><a class="menu-nav" href="portfolio.html">Pordfolio</a></li>
-              <li><a class="menu-nav" href="/contact">Kontakt</a></li>
-            </ul>
-          </nav>
-          <a class="menu-mail" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-          <a class="menu-phone" href="tel:+48111111111">+48 111 111 111</a>
+          <div class="first-menu-box">
+            <h2 class="logo"><span class="first-part-logo">Web</span>Studio</h2>
+            <nav class="menu">
+              <ul class="list box">
+                <li><a class="menu-nav" href="index.html">Agencja</a></li>
+                <li><a class="menu-nav" href="portfolio.html">Pordfolio</a></li>
+                <li><a class="menu-nav" href="/contact">Kontakt</a></li>
+              </ul>
+            </nav>
+          </div>
+          <div class="second-menu-box">
+            <a class="menu-mail" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+            <a class="menu-phone" href="tel:+48111111111">+48 111 111 111</a>
+          </div>
         </div>
       </header>
       <main>
-        <section class="primary">
-          <!--HERO-->
+          <section class="primary">
+               <!--HERO-->
+          <div class="container">
           <h1 class="primary-title">
             Efektywne rozwiązania dla waszego biznesu
           </h1>
           <button class="primary-bg" type="button">Zamów usługe</button>
         </section>
-        <section class="container">
+      </div>
+        <section>
+          <div  class="container">
           <!--TEKST-->
           <div class="box">
             <ul class="list">
