--- a/portfolio.html
+++ b/portfolio.html
@@ -39,12 +39,14 @@
       </header>
     <main>
       <section class="filter">
+       <div class="container">
         <!--HERO-->
           <button class="filter-bg" type="button">Wszystkie</button>
           <button class="filter-bg" type="button">Strony</button>
           <button class="filter-bg" type="button">Aplikacje</button>
           <button class="filter-bg" type="button">Dizajn</button>
           <button class="filter-bg" type="button">Marketing</button>
+          </div>
         </section>
       <section class="portfolio ">
         <!--Portfolio-->
